# tiny-lang

./: .dir-locals.el  .stylish-haskell.yaml  README.md  hie.yaml  stack.yaml  tiny-lang.cabal
.github/workflows/: haskell.yml
bench/: Main.hs
boolean/TinyLang/Boolean/: Core.hs  Environment.hs  Evaluator.hs  Generator.hs  Parser.hs  Printer.hs
common/TinyLang/: Environment.hs  Generator.hs  ParseUtils.hs  Prelude.hs  Var.hs
field/TinyLang/Field/: BigField.hs  Core.hs  Evaluator.hs  Existential.hs  F17.hs  F4913.hs  Generator.hs  Jubjub.hs  NamedType.hs  ParsableField.hs  Parser.hs  ParserUtils.hs  Printer.hs  Rename.hs  Test.hs  Type.hs  UParser.hs  Uni.hs  UniConst.hs  UniVal.hs
field/TinyLang/Field/Raw/: Core.hs  Parser.hs
field/TinyLang/Field/Typed/: Core.hs  Parser.hs  TypeChecker.hs
integer/TinyLang/Integer/: Core.hs  Evaluator.hs  Printer.hs
rational/TinyLang/Rational/: Core.hs  Evaluator.hs  Printer.hs
test/: Main.hs  Textual.hs
test/Boolean/: Textual.hs
test/Field/: Axioms.hs  FieldAxioms.hs  Parsing.hs  Renaming.hs  TestUtils.hs  Textual.hs
test/Field/Raw/: Textual.hs
test/Field/Raw/golden/: 00-bool-literals.field  00-bool-literals.golden  01-field-literals.field  01-field-literals.golden  02-vector-literals.field  02-vector-literals.golden  03-lexer-whitespace.field  03-lexer-whitespace.golden  04-lexer-whitespace.field  04-lexer-whitespace.golden  05-lexer-whitespace.field  05-lexer-whitespace.golden  06-operator-precedence.field  06-operator-precedence.golden  07-operator-precedence.field  07-operator-precedence.golden  08-operator-precedence.field  08-operator-precedence.golden  09-for-loop.field  09-for-loop.golden  10-for-loop.field  10-for-loop.golden  11-everything.field  11-everything.golden  bool-literal-F.golden  bool-literal-T.field  bool-literal-T.golden  everything.golden  for-loop-00.field  for-loop-00.golden  for-loop-01.field  for-loop-01.golden  lexer-whitespace-01.field  lexer-whitespace-01.golden  lexer-whitespace-02.field  lexer-whitespace-02.golden  operator-precedence-00.field  operator-precedence-00.golden  operator-precedence-01.field  operator-precedence-01.golden  (+5 more)
test/Field/Typed/: Textual.hs
test/Field/Typed/golden/: 00-constants.field  00-constants.golden  01-constant.golden  01-variables.field  01-variables.golden  02-binops.field  02-binops.golden  02-constant.field  02-constant.golden  03-unops.field  03-unops.golden  03-variable.golden  04-statements.field  04-statements.golden  04-variable.golden  05-ifs.field  05-ifs.golden  05-variable.golden  06-anns.field  06-anns.golden  06-binop.field  06-binop.golden  07-binop.field  07-binop.golden  07-everything.field  07-everything.golden  08-binop.field  08-binop.golden  09-binop.field  09-binop.golden  10-binop.field  10-binop.golden  11-binop.golden  12-binop.golden  13-binop.golden  14-binop.golden  15-binop.golden  16-binop.golden  17-binop.golden  18-binop.field  (+27 more)
test/Field/golden/: 00-for-loops.field  00-for-loops.golden  01-uniques.field  01-uniques.golden  02-nested-loop.field  02-nested-loop.golden  03-issue-76.field  03-issue-76.golden  04-ext-and-for.field  04-ext-and-for.golden  forLoops.golden
