name:                tiny-lang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tiny-lang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs: library common boolean field
    exposed-modules:
        Data.Field
        TinyLang.Environment
        TinyLang.Generator
        TinyLang.ParseUtils
        TinyLang.Prelude
        TinyLang.Var
        TinyLang.Boolean.Core
        TinyLang.Boolean.Evaluator
        TinyLang.Boolean.Generator
        TinyLang.Boolean.Parser
        TinyLang.Boolean.Printer
        TinyLang.Field.Core
        TinyLang.Field.Evaluator
        TinyLang.Field.Generator
        TinyLang.Field.Parser
        TinyLang.Field.Printer
        TinyLang.Field.Rename
        TinyLang.Field.F17
        TinyLang.Field.F4913
    build-depends:
        base >= 4.7 && < 5,
        transformers,
        mtl,
        containers,
        hashable,
        unordered-containers,
        vector,
        megaparsec,
        mmorph,
        parser-combinators,
        QuickCheck,
        QuickCheck-GenT
    default-language: Haskell2010
    default-extensions:
        MultiParamTypeClasses, FlexibleContexts, FlexibleInstances
        ScopedTypeVariables, ConstraintKinds, DefaultSignatures
        GADTs, DataKinds, PolyKinds, RankNTypes, TypeFamilies, FunctionalDependencies
        DerivingStrategies, DeriveAnyClass, GeneralizedNewtypeDeriving, StandaloneDeriving
        DeriveFunctor, DeriveFoldable, DeriveTraversable
        DeriveGeneric, DeriveDataTypeable,
        EmptyCase, LambdaCase, BangPatterns, MultiWayIf, TupleSections
        TypeOperators, PatternSynonyms, TypeApplications
        OverloadedStrings, StrictData
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wredundant-constraints -Widentities

test-suite tiny-lang-test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules:
        Boolean.Textual
        Field.Textual
    default-language: Haskell2010
    build-depends:
        tiny-lang,
        base >= 4.7 && < 5,
        mtl,
        containers,
        QuickCheck,
        QuickCheck-GenT,
        filepath,
        directory,
        tasty,
        tasty-golden,
        tasty-quickcheck
    default-extensions:
        MultiParamTypeClasses, FlexibleContexts, FlexibleInstances
        ScopedTypeVariables, ConstraintKinds, DefaultSignatures
        GADTs, DataKinds, PolyKinds, RankNTypes, TypeFamilies, FunctionalDependencies
        DerivingStrategies, DeriveAnyClass, GeneralizedNewtypeDeriving, StandaloneDeriving
        DeriveFunctor, DeriveFoldable, DeriveTraversable
        DeriveGeneric, DeriveDataTypeable,
        EmptyCase, LambdaCase, BangPatterns, MultiWayIf, TupleSections
        TypeOperators, PatternSynonyms, TypeApplications
        OverloadedStrings, StrictData
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
        -Wall
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wredundant-constraints -Widentities

source-repository head
  type:     git
  location: https://github.com/githubuser/tiny-lang
