name:                tiny-lang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tiny-lang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs: library common field
    exposed-modules:
        Data.Field
        Data.Field.F17
        TinyLang.Environment
        TinyLang.Generator
        TinyLang.ParseUtils
        TinyLang.Prelude
        TinyLang.Var
        TinyLang.Field.Evaluator
        TinyLang.Field.Existential
        TinyLang.Field.Generator
        TinyLang.Field.NamedType
        TinyLang.Field.Printer
        TinyLang.Field.Rename
        TinyLang.Field.Jubjub
        TinyLang.Field.UniConst
        TinyLang.Field.Raw.Core
        TinyLang.Field.Raw.Parser
        TinyLang.Field.Typed.Core
        TinyLang.Field.Typed.Parser
        TinyLang.Field.Typed.TypeChecker

    build-depends:
        base >= 4.7 && < 5,
        transformers,
        mtl,
        containers,
        galois-field,
        semirings,
        hashable,
        unordered-containers,
        vector,
        megaparsec,
        mmorph,
        parser-combinators,
        interpolate,
        QuickCheck,
        QuickCheck-GenT,
        quickcheck-instances,
        quiet
    default-language: Haskell2010
    default-extensions:
        MultiParamTypeClasses, FlexibleContexts, FlexibleInstances
        ScopedTypeVariables, ConstraintKinds, DefaultSignatures
        GADTs, DataKinds, PolyKinds, RankNTypes, TypeFamilies, FunctionalDependencies
        DeriveFunctor, DeriveFoldable, DeriveTraversable, DeriveGeneric, DeriveDataTypeable
        DerivingStrategies, GeneralizedNewtypeDeriving, DeriveAnyClass
        DerivingVia, StandaloneDeriving
        EmptyCase, LambdaCase, BangPatterns, MultiWayIf, TupleSections, MagicHash
        TypeOperators, PatternSynonyms, TypeApplications
        OverloadedStrings, StrictData
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wredundant-constraints -Widentities

test-suite tiny-lang-test
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    other-modules:
        Field.Textual
        Field.Axioms
        Field.Raw.Textual
        Field.TestUtils
        Field.Typed.Textual
    default-language: Haskell2010
    build-depends:
        tiny-lang,
        base >= 4.7 && < 5,
        mtl,
        containers,
        QuickCheck,
        QuickCheck-GenT,
        filepath,
        directory,
        Glob,
        tasty,
        tasty-golden,
        tasty-hunit,
        tasty-quickcheck
    default-extensions:
        MultiParamTypeClasses, FlexibleContexts, FlexibleInstances
        ScopedTypeVariables, ConstraintKinds, DefaultSignatures
        GADTs, DataKinds, PolyKinds, RankNTypes, TypeFamilies, FunctionalDependencies
        DeriveFunctor, DeriveFoldable, DeriveTraversable, DeriveGeneric, DeriveDataTypeable
        DerivingStrategies, GeneralizedNewtypeDeriving, DeriveAnyClass
        DerivingVia, StandaloneDeriving
        EmptyCase, LambdaCase, BangPatterns, MultiWayIf, TupleSections, MagicHash
        TypeOperators, PatternSynonyms, TypeApplications
        OverloadedStrings, StrictData
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N
        -Wall
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wredundant-constraints -Widentities

source-repository head
  type:     git
  location: https://github.com/githubuser/tiny-lang
